# pdf-to-chapters

./: .gitignore  DEPLOY.md  PLAN.md  README.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: api-spec.md  architecture.md  frontend-design.md  llm-integration.md  pdf-processing.md  prompts.md  quality-evaluation.md
scripts/: bench_large.mjs  diagnose.mjs  gen-social.mjs  integration_e2e.py  test_browser.mjs
scripts/templates/: icon-card.html  og-card.html
site/: app.js  index.html  site.webmanifest  style.css
tests/: conftest.py  test_confidence.py  test_frontend.py  test_llm.py  test_pdf.py  test_pipeline.py  test_queue.py  test_server.py  test_toc.py
tests/e2e/: a11y.spec.mjs  fixtures.mjs  walnut.spec.mjs
walnut/: cli.py  confidence.py  errors.py  llm.py  pdf.py  pipeline.py  queue.py  schemas.py  server.py  toc.py
walnut/web/: index.html
walnut/web/static/: style.css  walnut.js
